2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* pandoradb.postgreSQL.sql: improved the code source style.
	
	* pandoradb.oracle.sql: fixed duplicated fields
	"critical_instructions", "warning_instructions" and
	"unknown_instructions" in the table "tagente_modulo".
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/configurar_agente.php: fixed PHP warnings.

2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* operation/visual_console/render_view.php,
	godmode/reporting/visual_console_builder.php,
	include/functions_events.php: some fixes about PHP warnings.
	
	Fixes: #3611022

2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* include/ajax/module.php: fixed the PHP warnings.

2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/url_address.php: fixed the width of iframe.
	
	Fixes: #3611067

2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_treeview.php: fixed the PHP warning.
	
	Fixes: #3611072

2013-04-17 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_ui.php: fixed the data to show in the
	autocomplete when it is not set kind of data.
	
	Fixes: #3607968

2013-04-17  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	operation/agentes/ver_agente.php
	images/network_small.png
	images/agent_sync.png
	images/module_sync.png
	images/network_mc.png
	images/group_sync.png
	images/database_mc.png
	images/tag_sync.png
	images/alerts_template.png
	images/alerts_command.png
	images/alerts_sync.png
	images/gm_tag.png
	images/gm_agent.png
	images/users_sync.png
	images/groups_small/email.png
	images/groups_small/mail.png
	images/gm_category.png
	images/policies_queue.png
	images/alerts_action.png: Several aesthetic changes

2013-04-16 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/alerts_status.php: fixed the PHP warnings and
	improved the show when have not alerts.

2013-04-16 Miguel de Dios <miguel.dedios@artica.es>
